# rail-score

./: .gitignore  CHANGELOG.md  PyPI_DESCRIPTION.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  release.yaml
docs/: api-reference.md  examples.md  index.md  installation.md  quickstart.md
examples/: 01_basic_evaluation.ipynb
rail_score/: __init__.py
