[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rail-score"
version = "2.0.0"
description = "DEPRECATED — use rail-score-sdk instead. This package redirects to rail-score-sdk."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sumit Verma", email = "sumit@responsibleailabs.ai"},
    {name = "Responsible AI Labs", email = "research@responsibleailabs.ai"},
]
keywords = [
    "deprecated",
    "rail-score-sdk",
    "responsible-ai",
    "ai-safety",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "rail-score-sdk>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/RAILethicsHub/rail-score/tree/main/python"
Documentation = "https://responsibleailabs.ai/developer/docs"
"New Package" = "https://pypi.org/project/rail-score-sdk/"
Repository = "https://github.com/RAILethicsHub/rail-score"

[tool.setuptools]
packages = ["rail_score"]
